more instructions, plus SIGINT fires RST interrupt

--- a/util/link.cfg
+++ b/util/link.cfg
@@ -1,11 +1,13 @@
 MEMORY
 {
-	ROM0: start = $0000, size = $FFFA, fill = yes;
+	ENTRY: start = $0000, size = $FF, fill = yes;
+	CODE: start = $1000, size = $EFFA, fill = yes;
 	VECTORS: start = $FFFA, size = $6, fill = yes;
 }
 
 SEGMENTS
 {
-	CODE: load = ROM0, type = ro;
+	ENTRY: load = ENTRY, type = ro;
+	CODE: load = CODE, type = ro;
 	VECTORS: load = VECTORS, type = ro;
 }
